--- a/src/serv-args.def.in
+++ b/src/serv-args.def.in
@@ -4,6 +4,7 @@ prog-title    = "GnuTLS server";
 prog-desc     = "Simple server program to act as an HTTPS or TLS echo service.";
 short-usage   = "Usage: gnutls-serv [options]\ngnutls-serv --help for usage instructions.\n";
 prog-group    = "GnuTLS";
+explain       = "";
 detail        = "Server program that listens to incoming TLS connections.";
 gnu-usage;
 no-xlate = opt;
