--- a/src/psk-args.def.in
+++ b/src/psk-args.def.in
@@ -3,6 +3,7 @@ prog-name     = psktool;
 prog-title    = "GnuTLS PSK tool";
 prog-desc     = "Program to create PSK parameters.\n";
 detail    = "Program  that generates random keys for use with TLS-PSK. The
+help-value = "h";
 keys are stored in hexadecimal format in a key file.";
 short-usage   = "psktool [options]\npsktool --help for usage instructions.\n";
 prog-group    = "GnuTLS";
