--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -20,13 +20,16 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 dist_man_MANS = gnutls-cli.1 gnutls-cli-debug.1 gnutls-serv.1	\
-	certtool.1 psktool.1 p11tool.1
+	certtool.1 psktool.1 p11tool.1 ocsptool.1
 
 if ENABLE_SRP
 dist_man_MANS += srptool.1
 endif
 
 certtool.1: ../../src/certtool-args.def
+	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
+
+ocsptool.1: ../../src/ocsptool-args.def
 	-autogen -DMAN_SECTION=1 -Tagman-cmd.tpl $<
 
 gnutls-cli.1: ../../src/cli-args.def
