--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -485,6 +485,7 @@ APIMANS += gnutls_certificate_set_openpgp_key_mem2.3
 APIMANS += gnutls_certificate_set_openpgp_keyring_mem.3
 APIMANS += gnutls_certificate_set_openpgp_keyring_file.3
 APIMANS += gnutls_pkcs11_init.3
+APIMANS += gnutls_pkcs11_reinit.3
 APIMANS += gnutls_pkcs11_deinit.3
 APIMANS += gnutls_pkcs11_set_token_function.3
 APIMANS += gnutls_pkcs11_set_pin_function.3
@@ -559,6 +560,7 @@ APIMANS += gnutls_x509_crt_get_version.3
 APIMANS += gnutls_x509_crt_get_key_id.3
 APIMANS += gnutls_x509_crt_set_authority_key_id.3
 APIMANS += gnutls_x509_crt_get_authority_key_id.3
+APIMANS += gnutls_x509_crt_get_authority_key_gn_serial.3
 APIMANS += gnutls_x509_crt_get_subject_key_id.3
 APIMANS += gnutls_x509_crt_get_subject_unique_id.3
 APIMANS += gnutls_x509_crt_get_issuer_unique_id.3
@@ -646,6 +648,7 @@ APIMANS += gnutls_x509_crl_set_next_update.3
 APIMANS += gnutls_x509_crl_set_crt_serial.3
 APIMANS += gnutls_x509_crl_set_crt.3
 APIMANS += gnutls_x509_crl_get_authority_key_id.3
+APIMANS += gnutls_x509_crl_get_authority_key_gn_serial.3
 APIMANS += gnutls_x509_crl_get_number.3
 APIMANS += gnutls_x509_crl_get_extension_oid.3
 APIMANS += gnutls_x509_crl_get_extension_info.3
