--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,12 +17,8 @@
 # along with this file; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
-SUBDIRS =
 if ENABLE_CRYWRAP
-SUBDIRS += crywrap
-endif
-if NEED_LIBOPTS
-SUBDIRS += $(LIBOPTS_DIR)
+SUBDIRS = crywrap
 endif
 
 AM_CFLAGS = $(WARN_CFLAGS) $(WERROR_CFLAGS)
