Fix up some typos and obsolete comments
Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -21,13 +21,15 @@
  */
 
 /* This file contains the types and prototypes for all the
- * high level functionality of gnutls main library. For the
- * extra functionality (which is under the GNU GPL license) check
- * the gnutls/extra.h header. The openssl compatibility layer is
- * in gnutls/openssl.h.
+ * high level functionality of the gnutls main library.
  *
- * The low level cipher functionality is in libgcrypt. Check
- * gcrypt.h
+ * If the optional C++ binding was built, it is available in
+ * gnutls/gnutlsxx.h.
+ *
+ * The openssl compatibility layer (which is under the GNU GPL
+ * license) is in gnutls/openssl.h.
+ *
+ * The low level cipher functionality is in gnutls/crypto.h.
  */
 
 
