--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -797,6 +797,7 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
   gnutls_sign_algorithm_t gnutls_sign_get_id (const char *name);
 
   /* list supported algorithms */
+  const gnutls_ecc_curve_t * gnutls_ecc_curve_list (void);
   const gnutls_cipher_algorithm_t *gnutls_cipher_list (void);
   const gnutls_mac_algorithm_t *gnutls_mac_list (void);
   const gnutls_compression_method_t *gnutls_compression_list (void);
