--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -921,6 +921,12 @@ gnutls_ecc_curve_t gnutls_ecc_curve_get(gnutls_session_t session);
                                   const char *priorities,
                                   const char **err_pos);
 
+  int gnutls_priority_get_certificate_type_list (gnutls_priority_t pcache, const unsigned int** list);
+  int gnutls_priority_get_sign_list (gnutls_priority_t pcache, const unsigned int** list);
+  int gnutls_priority_get_protocol_list (gnutls_priority_t pcache, const unsigned int** list);
+  int gnutls_priority_get_compression_list (gnutls_priority_t pcache, const unsigned int** list);
+  int gnutls_priority_get_ecc_curve_list (gnutls_priority_t pcache, const unsigned int** list);
+
   /* for compatibility
    */
   int gnutls_set_default_priority (gnutls_session_t session);
