--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -202,6 +202,7 @@ APIMANS += gnutls_protocol_get_id.3
 APIMANS += gnutls_certificate_type_get_id.3
 APIMANS += gnutls_pk_get_id.3
 APIMANS += gnutls_sign_get_id.3
+APIMANS += gnutls_ecc_curve_list.3
 APIMANS += gnutls_cipher_list.3
 APIMANS += gnutls_mac_list.3
 APIMANS += gnutls_compression_list.3
@@ -243,6 +244,11 @@ APIMANS += gnutls_priority_deinit.3
 APIMANS += gnutls_priority_get_cipher_suite_index.3
 APIMANS += gnutls_priority_set.3
 APIMANS += gnutls_priority_set_direct.3
+APIMANS += gnutls_priority_certificate_type_list.3
+APIMANS += gnutls_priority_sign_list.3
+APIMANS += gnutls_priority_protocol_list.3
+APIMANS += gnutls_priority_compression_list.3
+APIMANS += gnutls_priority_ecc_curve_list.3
 APIMANS += gnutls_set_default_priority.3
 APIMANS += gnutls_cipher_suite_get_name.3
 APIMANS += gnutls_protocol_get_version.3
