--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .deps
 .libs
 ABOUT-NLS
+ChangeLog
 INSTALL
 Makefile
 Makefile.in
@@ -29,7 +30,9 @@ config.status
 configure
 doc/Makefile
 doc/Makefile.in
+doc/abstract-api.texi
 doc/algorithms.texi
+doc/compat-api.texi
 doc/core.c.texi
 doc/coverage/
 doc/credentials/Makefile
@@ -40,47 +43,49 @@ doc/credentials/srp/Makefile
 doc/credentials/srp/Makefile.in
 doc/credentials/x509/Makefile
 doc/credentials/x509/Makefile.in
+doc/crypto-api.texi
 doc/cyclo/Makefile
 doc/cyclo/Makefile.in
 doc/cyclo/cyclo-gnutls.html
 doc/doxygen/Doxyfile
 doc/doxygen/html/
 doc/doxygen/latex/
+doc/dtls-api.texi
 doc/enums.texi
 doc/enums/
 doc/errcodes
 doc/error_codes.texi
 doc/examples/Makefile
 doc/examples/Makefile.in
-doc/examples/print-ciphersuites
 doc/examples/ex-cert-select
 doc/examples/ex-cert-select-pkcs11
+doc/examples/ex-client-anon
+doc/examples/ex-client-dtls
 doc/examples/ex-client-psk
 doc/examples/ex-client-resume
 doc/examples/ex-client-srp
 doc/examples/ex-client-tlsia
 doc/examples/ex-client-udp
+doc/examples/ex-client-x509
 doc/examples/ex-client1
 doc/examples/ex-client2
 doc/examples/ex-crq
 doc/examples/ex-cxx
+doc/examples/ex-ocsp-client
+doc/examples/ex-ocsp-verify
 doc/examples/ex-rfc2818
 doc/examples/ex-serv-anon
+doc/examples/ex-serv-dtls
 doc/examples/ex-serv-export
 doc/examples/ex-serv-pgp
 doc/examples/ex-serv-psk
 doc/examples/ex-serv-srp
+doc/examples/ex-serv-x509
 doc/examples/ex-serv1
-doc/examples/ex-serv-dtls
 doc/examples/libexamples.la
+doc/examples/print-ciphersuites
 doc/extra.c.texi
 doc/gnutls-api.texi
-doc/abstract-api.texi
-doc/pkcs11-api.texi
-doc/pkcs12-api.texi
-doc/dtls-api.texi
-doc/crypto-api.texi
-doc/compat-api.texi
 doc/gnutls-extra-api.texi
 doc/gnutls-guile.html
 doc/gnutls.aux
@@ -110,9 +115,21 @@ doc/latex/gnutls.lof
 doc/latex/gnutls.lot
 doc/manpages/Makefile
 doc/manpages/Makefile.in
+doc/manpages/certtool.1
+doc/manpages/gnutls-cli-debug.1
+doc/manpages/gnutls-cli.1
+doc/manpages/gnutls-serv.1
+doc/manpages/gnutls_*.3
+doc/manpages/ocsptool.1
+doc/manpages/p11tool.1
+doc/manpages/psktool.1
+doc/manpages/srptool.1
 doc/ocsp-api.texi
 doc/pgp-api.texi
+doc/pkcs11-api.texi
+doc/pkcs12-api.texi
 doc/printlist
+doc/reference/*.bak
 doc/reference/Makefile
 doc/reference/Makefile.in
 doc/reference/gnutls-decl-list.txt
@@ -146,6 +163,7 @@ doc/scripts/Makefile
 doc/scripts/Makefile.in
 doc/stamp-1
 doc/stamp-vti
+doc/stamp_enums
 doc/version-guile.texi
 doc/version.texi
 doc/x509-api.texi
@@ -360,6 +378,7 @@ lib/x509/Makefile
 lib/x509/Makefile.in
 lib/x509/libgnutls_x509.la
 lib/x509/x509-api.texi
+libopts/libopts.la
 libtool
 m4/codeset.m4
 m4/fcntl-o.m4
@@ -421,22 +440,27 @@ po/quot.sed
 po/remove-potcdate.sed
 po/remove-potcdate.sin
 po/stamp-po
-src/cli-debug-args.def
-src/psk-args.def
-src/cli-args.def
-src/srptool-args.def
 src/Makefile
 src/Makefile.in
 src/benchmark
 src/benchmark-cipher
 src/benchmark-tls
 src/certtool
+src/certtool-args.c
+src/certtool-args.def
+src/certtool-args.h
 src/cfg/Makefile
 src/cfg/Makefile.in
 src/cfg/platon/Makefile
 src/cfg/platon/Makefile.in
 src/cfg/platon/str/Makefile
 src/cfg/platon/str/Makefile.in
+src/cli-args.c
+src/cli-args.def
+src/cli-args.h
+src/cli-debug-args.c
+src/cli-debug-args.def
+src/cli-debug-args.h
 src/crywrap/crywrap
 src/gaa.skel
 src/gnutls-cli
@@ -452,18 +476,32 @@ src/libcmd-psk.la
 src/libcmd-serv.la
 src/libcmd-srp.la
 src/ocsptool
+src/ocsptool-args.c
+src/ocsptool-args.def
+src/ocsptool-args.h
 src/ocsptool-gaa.c
 src/ocsptool-gaa.h
 src/p11tool
+src/p11tool-args.c
+src/p11tool-args.def
+src/p11tool-args.h
+src/psk-args.c
+src/psk-args.def
+src/psk-args.h
 src/psktool
+src/serv-args.c
+src/serv-args.def
+src/serv-args.h
 src/srptool
+src/srptool-args.c
+src/srptool-args.def
+src/srptool-args.h
 stamp-h1
 tags
 tests/*/out
 tests/Makefile
 tests/Makefile.in
 tests/anonself
-tests/rsa-encrypt-decrypt
 tests/certder
 tests/certificate_set_x509_crl
 tests/certuniqueid
@@ -520,6 +558,7 @@ tests/pkcs8-decode/Makefile.in
 tests/pskself
 tests/resume
 tests/rng-fork
+tests/rsa-encrypt-decrypt
 tests/rsa-md5-collision/Makefile
 tests/rsa-md5-collision/Makefile.in
 tests/safe-renegotiation/Makefile
@@ -533,6 +572,9 @@ tests/setcredcrash
 tests/sha2/Makefile
 tests/sha2/Makefile.in
 tests/simple
+tests/slow/cipher-test
+tests/slow/gendh
+tests/slow/keygen
 tests/suite/eagain-cli
 tests/suite/libecore.la
 tests/suite/x509paths/X509tests
@@ -547,44 +589,3 @@ tests/x509paths/
 tests/x509self
 tests/x509sign-verify
 tests/x509signself
-tests/slow/keygen
-tests/slow/gendh
-doc/reference/*.bak
-doc/manpages/gnutls_*.3
-doc/manpages/gnutls-cli.1
-doc/manpages/gnutls-cli-debug.1
-doc/manpages/gnutls-serv.1
-doc/manpages/psktool.1
-doc/manpages/srptool.1
-doc/examples/ex-ocsp-client
-doc/examples/ex-ocsp-verify
-doc/examples/ex-client-anon
-doc/examples/ex-client-dtls
-doc/examples/ex-client-x509
-doc/examples/ex-serv-x509
-tests/slow/cipher-test
-libopts/libopts.la
-src/serv-args.def
-src/cli-args.c
-src/cli-args.h
-src/cli-debug-args.c
-src/cli-debug-args.h
-src/psk-args.c
-src/psk-args.h
-src/serv-args.c
-src/serv-args.h
-src/srptool-args.c
-src/srptool-args.h
-doc/manpages/p11tool.1
-src/p11tool-args.h
-src/p11tool-args.c
-src/p11tool-args.def
-src/certtool-args.c
-src/certtool-args.def
-src/certtool-args.h
-doc/manpages/certtool.1
-doc/stamp_enums
-src/ocsptool-args.c
-src/ocsptool-args.h
-src/ocsptool-args.def
-doc/manpages/ocsptool.1
